[gd_scene load_steps=26 format=3 uid="uid://bmgtu0lwsfh3c"]

[ext_resource type="Script" path="res://prefabs/components/properties_/player_component/player_component.gd" id="1_2gyab"]
[ext_resource type="PackedScene" uid="uid://dd5fpvwuwrhgx" path="res://prefabs/components/properties_/orientation_handler_2d_simplified/orientation_handler_2d_simplified.tscn" id="2_08w8m"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_br8i3"]
[ext_resource type="PackedScene" uid="uid://cul8k4e4apnjx" path="res://prefabs/components/properties_/velocity_/velocity_component.tscn" id="2_fwv8r"]
[ext_resource type="Script" path="res://prefabs/components/properties_/stats_/stats_component.gd" id="4_hpxyj"]
[ext_resource type="PackedScene" uid="uid://ccvduv36cygqj" path="res://prefabs/components/properties_/projectile_/projectile_instantiator.tscn" id="6_2ytui"]
[ext_resource type="Texture2D" uid="uid://qiy1fw8om25r" path="res://assets/aseprite/flagman.png" id="8_dsusd"]
[ext_resource type="PackedScene" uid="uid://di7kfq82yu81d" path="res://prefabs/components/properties_/player_component/coyote_timer.tscn" id="10_j1fyg"]
[ext_resource type="Script" path="res://prefabs/components/state_machine/state_machine.gd" id="11_b00kn"]
[ext_resource type="PackedScene" uid="uid://2ie66o7j0hh" path="res://prefabs/components/properties_/player_component/jump_buffer_timer.tscn" id="11_p08so"]
[ext_resource type="Script" path="res://prefabs/components/properties_/gravity_component/gravity_component.gd" id="12_5m2gb"]
[ext_resource type="Script" path="res://prefabs/characters/player/walk_.gd" id="13_77jqb"]
[ext_resource type="Script" path="res://prefabs/characters/player/attack_.gd" id="14_w5hej"]
[ext_resource type="PackedScene" uid="uid://c75lcu6etujpf" path="res://prefabs/characters/player/player_flag/player_flag.tscn" id="15_duie8"]
[ext_resource type="PackedScene" uid="uid://mh0efwgc7mqf" path="res://prefabs/characters/player/player_speed_modifier.tscn" id="17_mf460"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4loyv"]
cull_mode = 1
polygon = PackedVector2Array(-5, 2, 4, 2, 4, 1, -5, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p41l2"]
radius = 4.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kwsd5"]
radius = 6.0
height = 12.0

[sub_resource type="Animation" id="Animation_m1nxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlagLeft:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlagRight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [43]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Eyes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [53]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sparkles:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sparkles:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/LightOccluder2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_uuhcj"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [28, 29, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlagLeft:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [38, 39, 38]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlagRight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 48]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Eyes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [58, 59, 58]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sparkles:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [60, 61, 60]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sparkles:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CombatStateMachine/PlayerCombatAttack")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_flag"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/LightOccluder2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(2, 6), Vector2(1, 6), Vector2(3, 6)]
}

[sub_resource type="Animation" id="Animation_dgh7k"]
resource_name = "idle"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.449551, 0.549551, 0.649551, 0.749551),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlagLeft:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.1001, 0.2, 0.3, 0.449551, 0.549551, 0.649551, 0.749551),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 30, 31, 31, 32, 33, 34, 35, 36, 37]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlagRight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.449551, 0.549551, 0.649551, 0.749551),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Eyes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.449551, 0.549551, 0.649551, 0.749551),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56, 57]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sparkles:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/LightOccluder2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.433333, 0.55, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-4, 6), Vector2(-2, 4), Vector2(-1, 2), Vector2(0, 0), Vector2(0, 0), Vector2(1, 2), Vector2(1, 4), Vector2(3, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hri46"]
_data = {
"RESET": SubResource("Animation_m1nxg"),
"attack": SubResource("Animation_uuhcj"),
"idle": SubResource("Animation_dgh7k")
}

[sub_resource type="Animation" id="Animation_1egoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lrphv"]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1.03526),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mcdrs"]
_data = {
"RESET": SubResource("Animation_1egoc"),
"blink": SubResource("Animation_lrphv")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "animation_player_2", "stats_component", "orientation_handler", "debug_raycasts_parent", "platform_detection_area_2d", "player_speed_modifier", "camera_2d") groups=["Persist", "Player"]]
z_index = 10
texture_filter = 1
collision_layer = 130
collision_mask = 81
collision_priority = 4.0
script = ExtResource("1_2gyab")
animation_player = NodePath("AnimationPlayer")
animation_player_2 = NodePath("AnimationPlayer2")
stats_component = NodePath("StatsComponent")
orientation_handler = NodePath("OrientationHandler2DSimplified")
debug_raycasts_parent = NodePath("DebugRaycasts")
platform_detection_area_2d = NodePath("PlatformDetectionArea2D")
player_speed_modifier = NodePath("PlayerSpeedModifier")
camera_2d = NodePath("Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 1
process_callback = 0
position_smoothing_speed = 20.0

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_br8i3")

[node name="FmodListener2D" type="FmodListener2D" parent="Camera2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Node2D"]
z_index = -1
occluder = SubResource("OccluderPolygon2D_4loyv")

[node name="Marker2D" type="Marker2D" parent="Node2D/LightOccluder2D"]

[node name="Body" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("8_dsusd")
offset = Vector2(0, -11)
hframes = 10
vframes = 7
frame = 23

[node name="FlagLeft" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("8_dsusd")
offset = Vector2(0, -11)
hframes = 10
vframes = 7
frame = 33

[node name="FlagRight" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("8_dsusd")
offset = Vector2(0, -11)
hframes = 10
vframes = 7
frame = 43

[node name="Eyes" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("8_dsusd")
offset = Vector2(0, -11)
hframes = 10
vframes = 7
frame = 53

[node name="Sparkles" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("8_dsusd")
offset = Vector2(0, -11)
hframes = 10
vframes = 7
frame = 60

[node name="FmodEventEmitter2DJump" type="FmodEventEmitter2D" parent="."]
event_name = "event:/Jump"
event_guid = "{aeace993-d3b3-48f4-8b16-e973bf62f0a2}"
event_parameter/Pitch/id = 8834718104293509755
event_parameter/Pitch/value = 0.0
event_parameter/Pitch/min_value = 0.0
event_parameter/Pitch/max_value = 1.0
event_parameter/Pitch/default_value = 0.0
event_parameter/Pitch/variant_type = 3

[node name="FmodEventEmitter2DJumpLanding" type="FmodEventEmitter2D" parent="."]
event_name = "event:/JumpLanding"
event_guid = "{f206a6e1-5e65-481e-99f6-498f86edfc84}"

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_p41l2")
one_way_collision_margin = 0.0

[node name="PlatformDetectionArea2D" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformDetectionArea2D"]
position = Vector2(-1, -5)
shape = SubResource("CapsuleShape2D_kwsd5")
one_way_collision_margin = 0.0

[node name="DebugRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="DebugRaycasts"]
modulate = Color(0, 1, 0, 1)
target_position = Vector2(25, 0)
collision_mask = 0
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="DebugRaycasts"]
modulate = Color(1, 0, 0, 1)
target_position = Vector2(25, 0)
collision_mask = 0
collide_with_bodies = false

[node name="GravityComponent" type="Node2D" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("12_5m2gb")
root = NodePath("..")
gravity_coefficient = 0.8

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("root", "stats_component") instance=ExtResource("2_fwv8r")]
root = NodePath("..")
stats_component = NodePath("../StatsComponent")
acceleration_coefficient = Vector2(576, 12)

[node name="StatsComponent" type="Node2D" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_hpxyj")
root = NodePath("..")
max_speed = Vector2(80, 128)
initial_jump_speed = 96.0
jump_speed = 48.0
max_health = 4

[node name="OrientationHandler2DSimplified" parent="." node_paths=PackedStringArray("root") instance=ExtResource("2_08w8m")]
root = NodePath("..")
nodes_to_flip = Array[NodePath]([NodePath("../Body"), NodePath("../FlagLeft"), NodePath("../FlagRight"), NodePath("../Eyes"), NodePath("../Sparkles"), NodePath("../PlayerCollisionShape"), NodePath("../Node2D")])

[node name="PlayerSpeedModifier" parent="." node_paths=PackedStringArray("root", "velocity_component") instance=ExtResource("17_mf460")]
root = NodePath("..")
velocity_component = NodePath("../VelocityComponent")
max_stored_jumps = 2

[node name="ProjectileContainer" parent="." instance=ExtResource("6_2ytui")]

[node name="CoyoteTimer" parent="." instance=ExtResource("10_j1fyg")]

[node name="JumpBufferTimer" parent="." instance=ExtResource("11_p08so")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hri46")
}
next/idle = &"attack"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mcdrs")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_b00kn")
initial_state = NodePath("PlayerMovementWalk")

[node name="PlayerMovementWalk" type="Node" parent="StateMachine" node_paths=PackedStringArray("root", "velocity_component", "gravity_component", "stats_component", "player_collision_shape", "fmod_event_emitter_2d_jump", "fmod_event_emitter_2d_jump_landing", "player_speed_modifier", "animation_player")]
script = ExtResource("13_77jqb")
root = NodePath("../..")
velocity_component = NodePath("../../VelocityComponent")
gravity_component = NodePath("../../GravityComponent")
stats_component = NodePath("../../StatsComponent")
player_collision_shape = NodePath("../../PlatformDetectionArea2D")
fmod_event_emitter_2d_jump = NodePath("../../FmodEventEmitter2DJump")
fmod_event_emitter_2d_jump_landing = NodePath("../../FmodEventEmitter2DJumpLanding")
player_speed_modifier = NodePath("../../PlayerSpeedModifier")
animation_player = NodePath("../../AnimationPlayer")

[node name="CombatStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_b00kn")
initial_state = NodePath("PlayerCombatAttack")

[node name="PlayerCombatAttack" type="Node" parent="CombatStateMachine" node_paths=PackedStringArray("root", "sparkles_sprite", "projectile_container", "throw_flag_cooldown", "animation_player")]
script = ExtResource("14_w5hej")
root = NodePath("../..")
sparkles_sprite = NodePath("../../Sparkles")
projectile_container = NodePath("../../ProjectileContainer")
proj_player_flag_scene = ExtResource("15_duie8")
throw_flag_cooldown = NodePath("Throw Flag Cooldown")
animation_player = NodePath("../../AnimationPlayer")

[node name="Throw Flag Cooldown" type="Timer" parent="CombatStateMachine/PlayerCombatAttack"]
wait_time = 0.1
one_shot = true
